# arena2d

./: .gitignore  Cargo.toml  README.md  nohup.out  shell.nix
crates/ar_audio/: Cargo.toml
crates/ar_audio/src/: lib.rs
crates/ar_battle/: Cargo.toml
crates/ar_battle/src/: lib.rs
crates/ar_bin/: Cargo.toml
crates/ar_bin/assets/: map.tmx
crates/ar_bin/assets/templates/: cards.ron  items.ron  monsters.ron  spells.ron
crates/ar_bin/src/: lib.rs  main.rs
crates/ar_camera/src/: lib.rs
crates/ar_cards/: Cargo.toml
crates/ar_cards/src/: lib.rs
crates/ar_conf/: Cargo.toml
crates/ar_conf/src/: lib.rs
crates/ar_core/: Cargo.toml
crates/ar_core/src/: lib.rs
crates/ar_debug_fn/: Cargo.toml
crates/ar_debug_fn/src/: lib.rs
crates/ar_enemies/: Cargo.toml
crates/ar_enemies/src/: ai.rs  lib.rs
crates/ar_game/: Cargo.toml
crates/ar_game/src/: lib.rs
crates/ar_input/: Cargo.toml
crates/ar_input/src/: lib.rs
crates/ar_items/: Cargo.toml
crates/ar_items/src/: lib.rs
crates/ar_level/: Cargo.toml
crates/ar_level/src/: lib.rs
crates/ar_lib/: Cargo.toml
crates/ar_lib/src/: lib.rs
crates/ar_map/: Cargo.toml
crates/ar_map/src/: lib.rs
crates/ar_menu/: Cargo.toml
crates/ar_monsters/: Cargo.toml
crates/ar_monsters/src/: ai.rs  animation.rs  lib.rs  spawn.rs
crates/ar_oneshot/: Cargo.toml
crates/ar_oneshot/src/: lib.rs
crates/ar_particles/: Cargo.toml
crates/ar_particles/src/: lib.rs
crates/ar_player/: Cargo.toml
crates/ar_player/src/: lib.rs
crates/ar_shop/: Cargo.toml
crates/ar_spells/: Cargo.toml
crates/ar_spells/src/: generator.rs  lib.rs
crates/ar_template/: Cargo.toml
crates/ar_template/src/: cards.rs  items.rs  lib.rs  monsters.rs  spells.rs
crates/ar_ui/: Cargo.toml
crates/ar_ui/src/: damagenumbers.rs  displaycards.rs  lib.rs
crates/ar_utils/: Cargo.toml
crates/ar_utils/src/: lib.rs
crates/battle/: Cargo.toml
crates/battle/src/: lib.rs
crates/camera/: Cargo.toml
crates/camera/src/: lib.rs
crates/conf/: Cargo.toml
crates/conf/src/: lib.rs
crates/enemies/: Cargo.toml
crates/enemies/src/: ai.rs  lib.rs
crates/input/src/: lib.rs
crates/map/: Cargo.toml
crates/map/src/: lib.rs
crates/menu/: Cargo.toml
crates/monsters/: Cargo.toml
crates/monsters/src/: lib.rs
crates/player/: Cargo.toml
crates/player/src/: charactercontroller.rs  lib.rs
crates/shop/: Cargo.toml
