[package]
name = "arena2d"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "arena2d"
path = "crates/ar_bin/src/lib.rs"
crate-type = [
    "staticlib",
    "cdylib",
    "rlib",
]

[[bin]]
name = "ar_bin"
path = "crates/ar_bin/src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
#link time optimization
lto = true
# allows for more optimazition in exchange for compile time
codegen-units = 1
# no unwinding on panic
panic = "abort"
# debug info
debug = 0
# strip debug symbols
strip = "symbols"

[workspace]
members = ["crates/*"]
default-members = ["crates/*"]


[workspace.dependencies]

# Parsing
toml = "0.8"
toml_edit = "0.22"
ron = "0.8"
once_cell = "1"
serde = { version = "1", features = ["derive"] }

# Util
smart-default = "0.7"
itertools = "0.13"
pathfinding = "4"
anyhow = "1"
rayon = "1"
tiny_bail = "0.3"

# RNG
noise = "0.9"
rand_core = {version = "0.6", features = ["std"]}
rand = "0.8"
bevy_rand = { version = "0.7", features = ["wyrand"]}

# Physics 
avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
avian_interpolation2d = { git = "https://github.com/janhohenheim/avian_interpolation", branch = "main"}

# Asset Loader
bevy_asset_loader = { version = "0.21", features = ["2d", "progress_tracking"] }
iyes_progress = "0.12"

# Tilemap
bevy_fast_tilemap = { git = "https://github.com/droggelbecher/bevy-fast-tilemap" }

# GUI Inspector
bevy-inspector-egui = "0.25"

# Particles
bevy_hanabi = { version = "0.12", default-features = false, features = ["2d"] }

# Input
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main" }

# Network
lightyear = "0.17"

[workspace.dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_winit",
    "bevy_render",
    "x11",
    "bevy_gilrs",
    "bevy_debug_stepping",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_pbr",
    "bevy_state",
    "default_font",
    "multi_threaded",
    "png",
    "jpeg",
    "serialize",
    "subpixel_glyph_atlas",
    "trace",
    "wav",
    ]

[workspace.lints.rust]
unsafe_code = "forbid"