[package]
name = "arena2d"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "arena2d"
path = "crates/ar_lib/src/lib.rs"
crate-type = [
    "staticlib",
    "cdylib",
    "rlib",
]

[[bin]]
name = "ar_bin"
path = "crates/ar_bin/src/main.rs"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
#link time optimization
lto = "fat"
# allows for more optimization in exchange for compile time
codegen-units = 1
# no unwinding on panic
panic = "abort"
# debug info
debug = 0
# strip debug symbols
strip = "symbols"


[workspace]
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.dependencies]

# Parsing
toml = "0.8"
toml_edit = "0.22"
ron = "0.8"
once_cell = "1"
serde = { version = "1", features = ["derive"] }

# Util
smart-default = "0.7"
itertools = "0.13"
pathfinding = "4"
anyhow = "1"
rayon = "1"
tiny_bail = "0.3"

# RNG
noise = "0.9"
rand_core = {version = "0.6", features = ["std"]}
rand = "0.8"
bevy_rand = { version = "0.8", features = ["wyrand"]}

# Physics
avian2d = "0.2"

# Asset Loader
bevy_asset_loader = { version = "0.22", features = ["2d", "progress_tracking"] }
iyes_progress = "0.13"

# Tilemap
bevy_ecs_tiled = { version = "0.5", features = ["avian", "debug"] }
bevy_ecs_tilemap = "0.15"

# GUI Inspector
bevy-inspector-egui = "0.28"

# Particles
bevy_hanabi = { version = "0.14", default-features = false, features = ["2d"] }

# Input
leafwing-input-manager = "0.16"

# Network
lightyear = "0.18"

[workspace.dependencies.bevy]
version = "0.15"
default-features = false
features = [
    "bevy_window",
    "bevy_winit",
    "bevy_render",
    "x11",
    "bevy_gilrs",
    "bevy_debug_stepping",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_pbr",
    "bevy_state",
    "default_font",
    "multi_threaded",
    "png",
    "jpeg",
    "serialize",
    "trace",
    "wav",
    ]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"