[package]
name = "ar_battle"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_xpbd_2d = { workspace = true }
bevy_asset_loader = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true

[dependencies.ar_core]
path = "../ar_core"

[dependencies.ar_template]
path = "../ar_template"