[package]
name = "ar_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_xpbd_2d = { workspace = true }
bevy_asset_loader = { workspace = true }

[lints]
workspace = true


[dependencies.ar_core]
path = "../ar_core"

[dependencies.ar_battle]
path = "../battle"

[dependencies.ar_map]
path = "../map"

[dependencies.ar_player]
path = "../player"

[dependencies.ar_input]
path = "../input"

[dependencies.ar_camera]
path = "../camera"

[dependencies.ar_shop]
path = "../shop"

[dependencies.ar_conf]
path = "../conf"

[dependencies.ar_game]
path = "../ar_game"

[dependencies.ar_enemies]
path = "../enemies"