[package]
name = "ar_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
avian2d = { workspace = true }
bevy_asset_loader = { workspace = true }

[lints]
workspace = true

[dependencies.ar_core]
path = "../ar_core"

[dependencies.ar_battle]
path = "../ar_battle"

[dependencies.ar_map]
path = "../ar_map"

[dependencies.ar_player]
path = "../ar_player"

[dependencies.ar_input]
path = "../ar_input"

[dependencies.ar_camera]
path = "../ar_camera"

[dependencies.ar_shop]
path = "../ar_shop"

[dependencies.ar_conf]
path = "../ar_conf"

[dependencies.ar_game]
path = "../ar_game"

[dependencies.ar_enemies]
path = "../ar_enemies"

[dependencies.ar_template]
path = "../ar_template"

[dependencies.ar_lib]
path = "../ar_lib"