[package]
name = "ar_cards"
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = { workspace = true }
bevy_rand = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
[lints]
workspace = true


[dependencies.ar_core]
path = "../ar_core"

[dependencies.ar_template]
path = "../ar_template"