[package]
name = "ar_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
avian2d = { workspace = true }
bevy_asset_loader = { workspace = true }
iyes_progress = { workspace = true }
#bevy-inspector-egui = { workspace = true }
bevy_fast_tilemap = { workspace = true }
bevy_rand = { workspace = true }
rand_core = { workspace = true }

[lints]
workspace = true

[dependencies.ar_core]
path = "../ar_core"

[dependencies.ar_battle]
path = "../ar_battle"

[dependencies.ar_map]
path = "../ar_map"

[dependencies.ar_player]
path = "../ar_player"

[dependencies.ar_input]
path = "../ar_input"

[dependencies.ar_camera]
path = "../ar_camera"

[dependencies.ar_shop]
path = "../ar_shop"

[dependencies.ar_conf]
path = "../ar_conf"

[dependencies.ar_enemies]
path = "../ar_enemies"

[dependencies.ar_audio]
path = "../ar_audio"

[dependencies.ar_template]
path = "../ar_template"

[dependencies.ar_monsters]
path = "../ar_monsters"

[dependencies.ar_ui]
path = "../ar_ui"

[dependencies.ar_utils]
path = "../ar_utils"

[dependencies.ar_spells]
path = "../ar_spells"

[dependencies.ar_oneshot]
path = "../ar_oneshot"