[package]
name = "ar_items"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
avian2d = { workspace = true }
bevy_asset_loader = { workspace = true }
rand_core = { workspace = true }
bevy_rand = { workspace = true }

[lints]
workspace = true

[dependencies.ar_core]
path = "../ar_core"

[dependencies.ar_template]
path = "../ar_template"