[package]
name = "ar_monsters"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
rand_core = { workspace = true }
bevy_rand = { workspace = true }
bevy_xpbd_2d = { workspace = true }

[lints]
workspace = true

[dependencies.ar_core]
path = "../ar_core"

[dependencies.ar_template]
path = "../ar_template"

[dependencies.ar_enemies]
path = "../ar_enemies"

[dependencies.ar_camera]
path = "../ar_camera"

[dependencies.ar_player]
path = "../ar_player"